@startuml name "uml диаграмма структуры базы данных NFC"
title UML-диаграмма структуры базы данных NFC

top to bottom direction

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 55

class NfcTag {
    id: uuid <<PK>>
    --
    manufacturer_id: uuid <<FK>>
    entity_type: varchar
    entity_id: uuid
    is_active: boolean
}

class WorkType {
    id: uuid <<PK>>
    --
    name: varchar
    code: varchar
    description: text
    nfc_tag_id: uuid <<FK>>
    is_active: boolean
}

class Employee {
    id: uuid <<PK>>
    --
    full_name: varchar
    personal_number: varchar
    position: varchar
    nfc_tag_id: uuid <<FK>>
    is_active: boolean
}

class Task {
    id: uuid <<PK>>
    --
    title: varchar
    description: text
    work_type_id: uuid <<FK>>
    employee_id: uuid <<FK>>
    location_id: uuid <<FK>>
    device_id: uuid <<FK>>
    closed_by_employee_id: uuid <<FK>>
    planned_date: date
    status: varchar
    priority: varchar
    closed_at: timestamp
    is_active: boolean
}

class Device {
    id: uuid <<PK>>
    --
    name: varchar
    inventory_number: varchar
    location_id: uuid <<FK>>
    nfc_tag_id: uuid <<FK>>
    is_active: boolean
}

class Location {
    id: uuid <<PK>>
    --
    name: varchar
    description: text
    nfc_tag_id: uuid <<FK>>
    is_active: boolean
}

class NfcManufacturer {
    id: uuid <<PK>>
    --
    name: varchar
    description: text
    is_active: boolean
}

Task -left-> WorkType
Task -right-> Employee
Task ..right..> Employee
Task -down-> Device
Task -down-> Location

Device -right-> Location

NfcTag -left-> NfcManufacturer

NfcTag ..> WorkType
NfcTag ..> Employee
NfcTag ..> Device
NfcTag ..> Location

note right of NfcTag
  Полиморфная связь NFC-метки.

  Поле entity_type указывает,
  к какому объекту системы привязана метка
  (сотрудник, оборудование, локация или тип работы).

  Поле entity_id хранит идентификатор
  соответствующей записи в выбранной таблице.

  PK - Primary Key. Первичный ключ (id).
  FK - Foreign Key. Вторичный ключ.
  Поле-ссылка на запись из другой таблицы.
end note

WorkType -[hidden]right-> Task
Task -[hidden]right-> Employee

Device -[hidden]right-> Location

NfcTag -[hidden]down-> Task
WorkType -[hidden]down-> Device
Employee -[hidden]down-> Location

NfcManufacturer -[hidden]right-> NfcTag

@enduml